tests/snapshots/cmd_account_help__account_cooldown_help.snap
---
source: tests/cmd_account_help.rs
expression: normalized
---
Show or clear failover cooldown state

Usage: codex-session account cooldown [OPTIONS] [COMMAND]

Commands:
  show   Show current cooldown state for one or all accounts
  clear  Clear cooldown for one account or all of them
  help   Print this message or the help of the given subcommand(s)

Options:
  -v, --verbose...
          Increase wrapper log verbosity (-v info, -vv debug, -vvv trace)

      --log-stderr
          Mirror wrapper logs to stderr in addition to the log file

  -q, --quiet
          Suppress non-error stderr output. The log file is unaffected

      --silent
          Suppress all stderr output including errors. The log file is unaffected

      --log-format <FMT>
          Format for the stderr log mirror (controls only the mirrored stderr log; the file sink is
          always JSON)
          
          [possible values: json, pretty]

  -V, --version
          Print wrapper + child version and exit

      --format <FMT>
          Output format for `version`, `config status`, `config-recipe list/show`, and `--version`

          Possible values:
          - text: Human-readable text output
          - json: Machine-readable JSON output

      --config <PATH>
          Load wrapper config from this explicit path instead of the default user/project locations

      --config-recipe <NAME>
          Select the wrapper config-recipe before any passthrough child argv begins

      --group <ID>
          Override the auto-derived group-id used for session-dir scoping

      --account <NAME>
          Account to use. Omit (or `auto`) for quota-aware auto-selection with failover; pass a name
          to pin a specific account for this invocation

      --max-retries <N>
          Retry child invocations this many times after a detected 429
          
          [default: 0]

      --dry-run
          Print the resolved child invocation and exit without running it

  -h, --help
          Print help (see a summary with '-h')
